// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Restricted_Icon  1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon XLarge surface="dark" with custom color  1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon ariaLabel  1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="Test"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    Test
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold  1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="pagination-right-arrow icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    pagination-right-arrow icon
  </title>
  <path
    d="M20.26723,10.80317,10.94378,20.044,9.6764,18.7643l7.12223-7.05674H1.8014v-1.8H16.808L9.68256,2.84378l1.26738-1.278Z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold  2`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="checkmark-alt icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    checkmark-alt icon
  </title>
  <path
    d="M10.8,20.2c-5.2,0-9.4-4.2-9.4-9.4c0-5.2,4.2-9.4,9.4-9.4c5.2,0,9.4,4.2,9.4,9.4c0,0,0,0,0,0C20.2,16,16,20.2,10.8,20.2z
	 M10.8,3.4c-4.1,0-7.4,3.3-7.4,7.4s3.3,7.4,7.4,7.4c4.1,0,7.4-3.3,7.4-7.4c0,0,0,0,0,0C18.2,6.7,14.9,3.4,10.8,3.4z M15.1,9.1
	l-1.4-1.4l-4,4l-1.7-1.7l-1.4,1.4l3.1,3.1L15.1,9.1z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold  3`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="pagination-right-arrow icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    pagination-right-arrow icon
  </title>
  <path
    d="M20.26723,10.80317,10.94378,20.044,9.6764,18.7643l7.12223-7.05674H1.8014v-1.8H16.808L9.68256,2.84378l1.26738-1.278Z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold medium surface="dark"  1`] = `
.c0 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold surface="dark"  1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="error icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    error icon
  </title>
  <path
    d="M19.4,8.8l-6.6-6.6c-1.1-1.1-2.9-1.1-4,0L2.2,8.8c-1.1,1.1-1.1,2.9,0,4l6.6,6.6c1.1,1.1,2.9,1.1,4,0
	c0,0,0,0,0,0l6.6-6.6C20.5,11.7,20.5,9.9,19.4,8.8z M18,11.4L11.4,18c-0.3,0.3-0.9,0.3-1.2,0l-6.6-6.6c-0.3-0.3-0.3-0.9,0-1.2
	l6.6-6.6c0.3-0.3,0.9-0.3,1.2,0l6.6,6.6C18.3,10.5,18.3,11.1,18,11.4z M9.9,13.4h1.7v1.7H9.9V13.4z M9.9,6.5h1.7V9l-0.6,2.6h-0.6
	L9.9,9V6.5z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold surface="dark"  2`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="checkmark icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    checkmark icon
  </title>
  <path
    d="M8,19.1l-7-7l2.5-2.5L8,14L18.1,3.8l2.5,2.5L8,19.1z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold surface="dark"  3`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="close icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    close icon
  </title>
  <path
    d="M12.2,10.8l6.8,6.8L17.6,19l-6.8-6.8L4,19l-1.4-1.4l6.8-6.8L2.6,4L4,2.6l6.8,6.8l6.8-6.8L19,4L12.2,10.8z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold surface="dark"  4`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="error icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    error icon
  </title>
  <path
    d="M19.4,8.8l-6.6-6.6c-1.1-1.1-2.9-1.1-4,0L2.2,8.8c-1.1,1.1-1.1,2.9,0,4l6.6,6.6c1.1,1.1,2.9,1.1,4,0
	c0,0,0,0,0,0l6.6-6.6C20.5,11.7,20.5,9.9,19.4,8.8z M18,11.4L11.4,18c-0.3,0.3-0.9,0.3-1.2,0l-6.6-6.6c-0.3-0.3-0.3-0.9,0-1.2
	l6.6-6.6c0.3-0.3,0.9-0.3,1.2,0l6.6,6.6C18.3,10.5,18.3,11.1,18,11.4z M9.9,13.4h1.7v1.7H9.9V13.4z M9.9,6.5h1.7V9l-0.6,2.6h-0.6
	L9.9,9V6.5z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold surface="dark"  5`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="info icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    info icon
  </title>
  <path
    d="M10.80011,1.36129a9.43848,9.43848,0,1,0,9.43848,9.43848A9.43847,9.43847,0,0,0,10.80011,1.36129Zm0,16.877a7.43848,7.43848,0,1,1,7.43848-7.43848A7.43849,7.43849,0,0,1,10.80011,18.23825ZM11.625,7.45849H9.95V5.78344h1.675ZM9.95834,9.11663H11.65v6.69989H9.95834Z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold surface="dark"  6`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="warning icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    warning icon
  </title>
  <path
    d="M19.90265,15.566l-6.936-12.03357a2.50126,2.50126,0,0,0-4.34088-.001L1.69659,15.566a2.51054,2.51054,0,0,0,2.17432,3.75989H17.7312A2.50926,2.50926,0,0,0,19.90265,15.566Zm-1.734,1.5055a.51007.51007,0,0,1-.43933.25482H3.87286a.51076.51076,0,0,1-.44323-.76251L10.3598,4.52633a.50217.50217,0,0,1,.87183,0l6.938,12.03552A.51553.51553,0,0,1,18.16864,17.0715ZM9.95,14.367h1.7V16.05H9.95Zm0-6.817h1.7v2.49048l-.56951,2.635H10.511L9.95,10.04049Z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon bold surface="dark" no color 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="down-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 12 12"
>
  <title>
    down-caret icon
  </title>
  <g>
    <polygon
      fill="#ffffff"
      points="6 9.687 0.518 4.206 1.932 2.791 6 6.859 10.067 2.791 11.481 4.206 6 9.687"
      stroke="none"
    />
  </g>
</svg>
`;

exports[`Restricted_Icon checkmark XLarge 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="checkmark icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    checkmark icon
  </title>
  <path
    d="M8,19.1l-7-7l2.5-2.5L8,14L18.1,3.8l2.5,2.5L8,19.1z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon checkmark XLarge dark surface 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="checkmark icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    checkmark icon
  </title>
  <path
    d="M8,19.1l-7-7l2.5-2.5L8,14L18.1,3.8l2.5,2.5L8,19.1z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon checkmark large 1`] = `
.c0 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  min-height: 1.5rem;
  min-width: 1.5rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="checkmark icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    checkmark icon
  </title>
  <path
    d="M8,19.1l-7-7l2.5-2.5L8,14L18.1,3.8l2.5,2.5L8,19.1z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon checkmark medium 1`] = `
.c0 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="checkmark icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    checkmark icon
  </title>
  <path
    d="M8,19.1l-7-7l2.5-2.5L8,14L18.1,3.8l2.5,2.5L8,19.1z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon checkmark small 1`] = `
.c0 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="checkmark icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    checkmark icon
  </title>
  <path
    d="M8,19.1l-7-7l2.5-2.5L8,14L18.1,3.8l2.5,2.5L8,19.1z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon checkmark small 2`] = `
.c0 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="checkmark icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    checkmark icon
  </title>
  <path
    d="M8,19.1l-7-7l2.5-2.5L8,14L18.1,3.8l2.5,2.5L8,19.1z"
    fill="#FBE4D7"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon close XLarge 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="close icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    close icon
  </title>
  <path
    d="M12.2,10.8l6.8,6.8L17.6,19l-6.8-6.8L4,19l-1.4-1.4l6.8-6.8L2.6,4L4,2.6l6.8,6.8l6.8-6.8L19,4L12.2,10.8z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon close XLarge dark surface 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="close icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    close icon
  </title>
  <path
    d="M12.2,10.8l6.8,6.8L17.6,19l-6.8-6.8L4,19l-1.4-1.4l6.8-6.8L2.6,4L4,2.6l6.8,6.8l6.8-6.8L19,4L12.2,10.8z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon close large 1`] = `
.c0 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  min-height: 1.5rem;
  min-width: 1.5rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="close icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    close icon
  </title>
  <path
    d="M12.2,10.8l6.8,6.8L17.6,19l-6.8-6.8L4,19l-1.4-1.4l6.8-6.8L2.6,4L4,2.6l6.8,6.8l6.8-6.8L19,4L12.2,10.8z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon close medium 1`] = `
.c0 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="close icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    close icon
  </title>
  <path
    d="M12.2,10.8l6.8,6.8L17.6,19l-6.8-6.8L4,19l-1.4-1.4l6.8-6.8L2.6,4L4,2.6l6.8,6.8l6.8-6.8L19,4L12.2,10.8z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon close small 1`] = `
.c0 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="close icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    close icon
  </title>
  <path
    d="M12.2,10.8l6.8,6.8L17.6,19l-6.8-6.8L4,19l-1.4-1.4l6.8-6.8L2.6,4L4,2.6l6.8,6.8l6.8-6.8L19,4L12.2,10.8z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon close small 2`] = `
.c0 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="close icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    close icon
  </title>
  <path
    d="M12.2,10.8l6.8,6.8L17.6,19l-6.8-6.8L4,19l-1.4-1.4l6.8-6.8L2.6,4L4,2.6l6.8,6.8l6.8-6.8L19,4L12.2,10.8z"
    fill="#ED7000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon error XLarge 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="error icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    error icon
  </title>
  <path
    d="M19.4,8.8l-6.6-6.6c-1.1-1.1-2.9-1.1-4,0L2.2,8.8c-1.1,1.1-1.1,2.9,0,4l6.6,6.6c1.1,1.1,2.9,1.1,4,0
	c0,0,0,0,0,0l6.6-6.6C20.5,11.7,20.5,9.9,19.4,8.8z M18,11.4L11.4,18c-0.3,0.3-0.9,0.3-1.2,0l-6.6-6.6c-0.3-0.3-0.3-0.9,0-1.2
	l6.6-6.6c0.3-0.3,0.9-0.3,1.2,0l6.6,6.6C18.3,10.5,18.3,11.1,18,11.4z M9.9,13.4h1.7v1.7H9.9V13.4z M9.9,6.5h1.7V9l-0.6,2.6h-0.6
	L9.9,9V6.5z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon error XLarge dark surface 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="error icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    error icon
  </title>
  <path
    d="M19.4,8.8l-6.6-6.6c-1.1-1.1-2.9-1.1-4,0L2.2,8.8c-1.1,1.1-1.1,2.9,0,4l6.6,6.6c1.1,1.1,2.9,1.1,4,0
	c0,0,0,0,0,0l6.6-6.6C20.5,11.7,20.5,9.9,19.4,8.8z M18,11.4L11.4,18c-0.3,0.3-0.9,0.3-1.2,0l-6.6-6.6c-0.3-0.3-0.3-0.9,0-1.2
	l6.6-6.6c0.3-0.3,0.9-0.3,1.2,0l6.6,6.6C18.3,10.5,18.3,11.1,18,11.4z M9.9,13.4h1.7v1.7H9.9V13.4z M9.9,6.5h1.7V9l-0.6,2.6h-0.6
	L9.9,9V6.5z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon error large 1`] = `
.c0 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  min-height: 1.5rem;
  min-width: 1.5rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="error icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    error icon
  </title>
  <path
    d="M19.4,8.8l-6.6-6.6c-1.1-1.1-2.9-1.1-4,0L2.2,8.8c-1.1,1.1-1.1,2.9,0,4l6.6,6.6c1.1,1.1,2.9,1.1,4,0
	c0,0,0,0,0,0l6.6-6.6C20.5,11.7,20.5,9.9,19.4,8.8z M18,11.4L11.4,18c-0.3,0.3-0.9,0.3-1.2,0l-6.6-6.6c-0.3-0.3-0.3-0.9,0-1.2
	l6.6-6.6c0.3-0.3,0.9-0.3,1.2,0l6.6,6.6C18.3,10.5,18.3,11.1,18,11.4z M9.9,13.4h1.7v1.7H9.9V13.4z M9.9,6.5h1.7V9l-0.6,2.6h-0.6
	L9.9,9V6.5z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon error medium 1`] = `
.c0 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="error icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    error icon
  </title>
  <path
    d="M19.4,8.8l-6.6-6.6c-1.1-1.1-2.9-1.1-4,0L2.2,8.8c-1.1,1.1-1.1,2.9,0,4l6.6,6.6c1.1,1.1,2.9,1.1,4,0
	c0,0,0,0,0,0l6.6-6.6C20.5,11.7,20.5,9.9,19.4,8.8z M18,11.4L11.4,18c-0.3,0.3-0.9,0.3-1.2,0l-6.6-6.6c-0.3-0.3-0.3-0.9,0-1.2
	l6.6-6.6c0.3-0.3,0.9-0.3,1.2,0l6.6,6.6C18.3,10.5,18.3,11.1,18,11.4z M9.9,13.4h1.7v1.7H9.9V13.4z M9.9,6.5h1.7V9l-0.6,2.6h-0.6
	L9.9,9V6.5z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon error small 1`] = `
.c0 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="error icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    error icon
  </title>
  <path
    d="M19.4,8.8l-6.6-6.6c-1.1-1.1-2.9-1.1-4,0L2.2,8.8c-1.1,1.1-1.1,2.9,0,4l6.6,6.6c1.1,1.1,2.9,1.1,4,0
	c0,0,0,0,0,0l6.6-6.6C20.5,11.7,20.5,9.9,19.4,8.8z M18,11.4L11.4,18c-0.3,0.3-0.9,0.3-1.2,0l-6.6-6.6c-0.3-0.3-0.3-0.9,0-1.2
	l6.6-6.6c0.3-0.3,0.9-0.3,1.2,0l6.6,6.6C18.3,10.5,18.3,11.1,18,11.4z M9.9,13.4h1.7v1.7H9.9V13.4z M9.9,6.5h1.7V9l-0.6,2.6h-0.6
	L9.9,9V6.5z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon error small 2`] = `
.c0 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="error icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    error icon
  </title>
  <path
    d="M19.4,8.8l-6.6-6.6c-1.1-1.1-2.9-1.1-4,0L2.2,8.8c-1.1,1.1-1.1,2.9,0,4l6.6,6.6c1.1,1.1,2.9,1.1,4,0
	c0,0,0,0,0,0l6.6-6.6C20.5,11.7,20.5,9.9,19.4,8.8z M18,11.4L11.4,18c-0.3,0.3-0.9,0.3-1.2,0l-6.6-6.6c-0.3-0.3-0.3-0.9,0-1.2
	l6.6-6.6c0.3-0.3,0.9-0.3,1.2,0l6.6,6.6C18.3,10.5,18.3,11.1,18,11.4z M9.9,13.4h1.7v1.7H9.9V13.4z M9.9,6.5h1.7V9l-0.6,2.6h-0.6
	L9.9,9V6.5z"
    fill="#D6EEFB"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon extraLarge 1`] = `
.c0 {
  display: inline-block;
  height: NaNrem;
  width: NaNrem;
  min-height: NaNrem;
  min-width: NaNrem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon large bold pagination-arrow-right 1`] = `
.c0 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  min-height: 1.5rem;
  min-width: 1.5rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="pagination-right-arrow icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    pagination-right-arrow icon
  </title>
  <path
    d="M20.26723,10.80317,10.94378,20.044,9.6764,18.7643l7.12223-7.05674H1.8014v-1.8H16.808L9.68256,2.84378l1.26738-1.278Z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon left-caret XLarge 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon left-caret XLarge dark surface 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon left-caret XLarge dark surface color 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#0077B4"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon left-caret large 1`] = `
.c0 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  min-height: 1.5rem;
  min-width: 1.5rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon left-caret medium 1`] = `
.c0 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon left-caret small 1`] = `
.c0 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon medium bold pagination-arrow-left bold 1`] = `
.c0 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="pagination-left-arrow icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    pagination-left-arrow icon
  </title>
  <path
    d="M19.8,11.7h-15l7.1,7.1L10.7,20l-9.3-9.2l9.3-9.2l1.3,1.3L4.8,9.9h15L19.8,11.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon medium surface="dark" no color 1`] = `
.c0 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon medium surface="dark" with custom color black 1`] = `
.c0 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon no size surface="dark" with custom color Black 1`] = `
.c0 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon size of number  1`] = `
.c0 {
  display: inline-block;
  height: 1.4375rem;
  width: 1.4375rem;
  min-height: 1.4375rem;
  min-width: 1.4375rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon small bold 1`] = `
.c0 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark"  1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark"  2`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="down-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 12 12"
>
  <title>
    down-caret icon
  </title>
  <g>
    <polygon
      fill="#ffffff"
      points="6 9.687 0.518 4.206 1.932 2.791 6 6.859 10.067 2.791 11.481 4.206 6 9.687"
      stroke="none"
    />
  </g>
</svg>
`;

exports[`Restricted_Icon surface="dark"  3`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="pagination-left-arrow icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    pagination-left-arrow icon
  </title>
  <path
    d="M19.8,11.7h-15l7.1,7.1L10.7,20l-9.3-9.2l9.3-9.2l1.3,1.3L4.8,9.9h15L19.8,11.7z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark"  4`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="checkmark-alt icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    checkmark-alt icon
  </title>
  <path
    d="M10.8,20.2c-5.2,0-9.4-4.2-9.4-9.4c0-5.2,4.2-9.4,9.4-9.4c5.2,0,9.4,4.2,9.4,9.4c0,0,0,0,0,0C20.2,16,16,20.2,10.8,20.2z
	 M10.8,3.4c-4.1,0-7.4,3.3-7.4,7.4s3.3,7.4,7.4,7.4c4.1,0,7.4-3.3,7.4-7.4c0,0,0,0,0,0C18.2,6.7,14.9,3.4,10.8,3.4z M15.1,9.1
	l-1.4-1.4l-4,4l-1.7-1.7l-1.4,1.4l3.1,3.1L15.1,9.1z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark"  5`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="checkmark icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    checkmark icon
  </title>
  <path
    d="M8,19.1l-7-7l2.5-2.5L8,14L18.1,3.8l2.5,2.5L8,19.1z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark"  6`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="close icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    close icon
  </title>
  <path
    d="M12.2,10.8l6.8,6.8L17.6,19l-6.8-6.8L4,19l-1.4-1.4l6.8-6.8L2.6,4L4,2.6l6.8,6.8l6.8-6.8L19,4L12.2,10.8z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark"  7`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="down-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 12 12"
>
  <title>
    down-caret icon
  </title>
  <g>
    <polygon
      fill="#ffffff"
      points="6 9.687 0.518 4.206 1.932 2.791 6 6.859 10.067 2.791 11.481 4.206 6 9.687"
      stroke="none"
    />
  </g>
</svg>
`;

exports[`Restricted_Icon surface="dark"  8`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="error icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    error icon
  </title>
  <path
    d="M19.4,8.8l-6.6-6.6c-1.1-1.1-2.9-1.1-4,0L2.2,8.8c-1.1,1.1-1.1,2.9,0,4l6.6,6.6c1.1,1.1,2.9,1.1,4,0
	c0,0,0,0,0,0l6.6-6.6C20.5,11.7,20.5,9.9,19.4,8.8z M18,11.4L11.4,18c-0.3,0.3-0.9,0.3-1.2,0l-6.6-6.6c-0.3-0.3-0.3-0.9,0-1.2
	l6.6-6.6c0.3-0.3,0.9-0.3,1.2,0l6.6,6.6C18.3,10.5,18.3,11.1,18,11.4z M9.9,13.4h1.7v1.7H9.9V13.4z M9.9,6.5h1.7V9l-0.6,2.6h-0.6
	L9.9,9V6.5z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark"  9`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="info icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    info icon
  </title>
  <path
    d="M10.80011,1.36129a9.43848,9.43848,0,1,0,9.43848,9.43848A9.43847,9.43847,0,0,0,10.80011,1.36129Zm0,16.877a7.43848,7.43848,0,1,1,7.43848-7.43848A7.43849,7.43849,0,0,1,10.80011,18.23825ZM11.625,7.45849H9.95V5.78344h1.675ZM9.95834,9.11663H11.65v6.69989H9.95834Z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark"  10`] = `
.c0 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark"  11`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="pagination-left-arrow icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    pagination-left-arrow icon
  </title>
  <path
    d="M19.8,11.7h-15l7.1,7.1L10.7,20l-9.3-9.2l9.3-9.2l1.3,1.3L4.8,9.9h15L19.8,11.7z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark"  12`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="pagination-right-arrow icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    pagination-right-arrow icon
  </title>
  <path
    d="M20.26723,10.80317,10.94378,20.044,9.6764,18.7643l7.12223-7.05674H1.8014v-1.8H16.808L9.68256,2.84378l1.26738-1.278Z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon surface="dark" no color 1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="warning icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="0"
  viewBox="0 0 21.6 21.6"
>
  <title>
    warning icon
  </title>
  <path
    d="M19.90265,15.566l-6.936-12.03357a2.50126,2.50126,0,0,0-4.34088-.001L1.69659,15.566a2.51054,2.51054,0,0,0,2.17432,3.75989H17.7312A2.50926,2.50926,0,0,0,19.90265,15.566Zm-1.734,1.5055a.51007.51007,0,0,1-.43933.25482H3.87286a.51076.51076,0,0,1-.44323-.76251L10.3598,4.52633a.50217.50217,0,0,1,.87183,0l6.938,12.03552A.51553.51553,0,0,1,18.16864,17.0715ZM9.95,14.367h1.7V16.05H9.95Zm0-6.817h1.7v2.49048l-.56951,2.635H10.511L9.95,10.04049Z"
    fill="#ffffff"
    stroke="none"
  />
</svg>
`;

exports[`Restricted_Icon tabIndex -1  1`] = `
.c0 {
  display: inline-block;
  height: 1.75rem;
  width: 1.75rem;
  min-height: 1.75rem;
  min-width: 1.75rem;
}

.c0:active,
.c0:focus {
  outline: none;
}

<svg
  aria-hidden="false"
  aria-label="left-caret icon"
  class="c0"
  fill="#000000"
  role="img"
  tabindex="-1"
  viewBox="0 0 21.6 21.6"
>
  <title>
    left-caret icon
  </title>
  <path
    d="M14.1,20.7l-9.9-9.9l9.9-9.9l2.5,2.5l-7.3,7.3l7.3,7.3L14.1,20.7z"
    fill="#000000"
    stroke="none"
  />
</svg>
`;
